--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -201,3 +201,32 @@ h2, h3{
 
 }
 
+
+.footer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.footer .social_icons{
+    list-style: none;
+    display: flex;
+    gap: 10px;
+}
+
+.footer .social_icons li img{
+    width: 25px;
+    height: 25px;
+
+}
+
+.github_icon{
+    background-color: var(--white);
+}
+.footer .social_icons li:hover img{
+    opacity: .5;
+}
